--- a/BrandPromotion/index.html
+++ b/BrandPromotion/index.html
@@ -1,217 +1,236 @@
 <!DOCTYPE html>
 <html lang="bn">
-
 <head>
-    <meta charset="UTF-8">
-    <title>ব্র্যান্ড প্রমোশন কার্ড</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Hind Siliguri", sans-serif;
-            background-color: #f0f4f8;
-            padding: 20px;
-        }
+  <meta charset="UTF-8">
+  <title>ব্র্যান্ড প্রমোশন কার্ড</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Hind Siliguri', sans-serif;
+      background: linear-gradient(145deg, #e0f7fa, #e3f2fd);
+      padding: 40px 20px;
+    }
 
-        .news-card {
-            position: relative;
-            width: 100%;
-            max-width: 600px;
-            height: 600px;
-            border: 2px solid #ccc;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-            background-color: #fff;
-            display: flex;
-            flex-direction: column;
-            margin: auto;
-            overflow: hidden;
-        }
+    .card-wrapper {
+      max-width: 1200px;
+      margin: auto;
+    }
 
-        .image-container {
-            height: 65%;
-            width: 100%;
-            background-color: #000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
+    .form-section {
+      background: white;
+      border-radius: 15px;
+      padding: 25px 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      transition: all 0.3s ease;
+    }
 
-        .news-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    .form-label {
+      font-weight: 600;
+      color: #1e3a8a;
+    }
 
-        .caption {
-            height: 35%;
-            font-size: 28px;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            font-weight: 700;
-            position: relative;
-            padding: 0 15px;
-            background-color: #1e3a8a;
-        }
+    .form-control {
+      border-radius: 8px;
+    }
 
-        .caption.with-footer {
-            height: calc(35% - 60px);
-        }
+    .news-card {
+      position: relative;
+      width: 100%;
+      max-width: 600px;
+      height: 600px;
+      border-radius: 16px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+      overflow: hidden;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      transition: all 0.3s ease-in-out;
+    }
 
-        .caption span {
-            z-index: 1;
-        }
+    .news-card:hover {
+      transform: scale(1.01);
+      box-shadow: 0 12px 35px rgba(0, 0, 0, 0.2);
+    }
 
-        .top-left-logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 70px;
-            height: auto;
-            z-index: 10;
-            opacity: 90%;
-            border-radius: 5px;
-        }
+    .image-container {
+      height: 65%;
+      background-color: #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+    }
 
-        .footer-logo {
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            position: absolute;
-            display: none;
-            object-fit: contain;
-        }
+    .news-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-        #downloadBtn {
-            padding: 10px 20px;
-            background-color: #dc2626;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-    </style>
+    .top-left-logo {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      width: 60px;
+      border-radius: 8px;
+      opacity: 0.9;
+    }
+
+    .caption {
+      height: 35%;
+      font-size: 26px;
+      color: #fff;
+      background: linear-gradient(to right, #1e3a8a, #2563eb);
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 0 20px;
+      position: relative;
+      transition: height 0.2s;
+    }
+
+    .caption.with-footer {
+      height: calc(35% - 60px);
+    }
+
+    .footer-logo {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      display: none;
+      object-fit: contain;
+    }
+
+    #downloadBtn {
+      padding: 12px 30px;
+      background-color: #1e40af;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      margin-top: 25px;
+      transition: background 0.3s ease;
+    }
+
+    #downloadBtn:hover {
+      background-color: #0f172a;
+    }
+  </style>
 </head>
-
 <body>
-    <div class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
-        <div class="container py-4">
-            <div class="row g-4">
-                <!-- Input Form -->
-                <div class="col-12 col-md-5">
-                    <div class="d-flex flex-column gap-3">
-                        <div>
-                            <label for="topLogo" class="form-label fw-semibold">লোগো আপলোড করুন</label>
-                            <input type="file" class="form-control" id="topLogo" accept="image/*">
-                        </div>
-                        <div>
-                            <label for="mainImage" class="form-label fw-semibold">পণ্যের ছবি নির্বাচন করুন</label>
-                            <input type="file" class="form-control" id="mainImage" accept="image/*">
-                        </div>
-                        <div>
-                            <label for="captionText" class="form-label fw-semibold">প্রমোশন টেক্সট লিখুন</label>
-                            <input type="text" class="form-control" id="captionText" placeholder="যেমন: আজই অর্ডার করুন!">
-                        </div>
-                        <div>
-                            <label for="footerImage" class="form-label fw-semibold">ফুটারে লোগো/বিজ্ঞাপন আপলোড করুন</label>
-                            <input type="file" class="form-control" id="footerImage" accept="image/*">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Preview Card -->
-                <div class="col-12 col-md-7">
-                    <div class="news-card">
-                        <div class="image-container">
-                            <img class="news-image" src="https://img.freepik.com/free-photo/blue-teal-sand-paper_53876-92791.jpg" alt="Product Image">
-                            <img class="top-left-logo" src="" alt="Brand Promotion Logo">
-                        </div>
-                        <div class="caption">
-                            <span>আজই অর্ডার করুন!</span>
-                        </div>
-                        <img id="footerLogo" class="footer-logo" src="" alt="Footer Logo">
-                    </div>
-                    <div class="mt-4 text-center">
-                        <button id="downloadBtn">📥 প্রিভিউ সেভ করুন</button>
-                    </div>
-                </div>
-            </div>
+  <div class="container card-wrapper">
+    <div class="row g-4">
+      <!-- Form Section -->
+      <div class="col-12 col-md-5">
+        <div class="form-section">
+          <div class="mb-3">
+            <label for="topLogo" class="form-label">🔰 লোগো আপলোড করুন</label>
+            <input type="file" class="form-control" id="topLogo" accept="image/*">
+          </div>
+          <div class="mb-3">
+            <label for="mainImage" class="form-label">🖼️ পণ্যের ছবি নির্বাচন করুন</label>
+            <input type="file" class="form-control" id="mainImage" accept="image/*">
+          </div>
+          <div class="mb-3">
+            <label for="captionText" class="form-label">📝 প্রমোশন টেক্সট লিখুন</label>
+            <input type="text" class="form-control" id="captionText" placeholder="যেমন: আজই অর্ডার করুন!">
+          </div>
+          <div class="mb-3">
+            <label for="footerImage" class="form-label">📢 ফুটার লোগো/বিজ্ঞাপন</label>
+            <input type="file" class="form-control" id="footerImage" accept="image/*">
+          </div>
         </div>
+      </div>
+
+      <!-- Preview Card -->
+      <div class="col-12 col-md-7">
+        <div class="news-card">
+          <div class="image-container">
+            <img class="news-image" src="https://img.freepik.com/free-photo/blue-teal-sand-paper_53876-92791.jpg" alt="Product Image">
+            <img class="top-left-logo" src="" alt="Top Logo">
+          </div>
+          <div class="caption">
+            <span>আজই অর্ডার করুন!</span>
+          </div>
+          <img id="footerLogo" class="footer-logo" src="" alt="Footer Logo">
+        </div>
+        <div class="text-center">
+          <button id="downloadBtn">📥 প্রিভিউ সেভ করুন</button>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script>
-        $('#mainImage').on('change', function (e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    $('.news-image').attr('src', e.target.result);
-                };
-                reader.readAsDataURL(file);
-            }
-        });
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script>
+    $('#mainImage').on('change', function (e) {
+      const file = e.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          $('.news-image').attr('src', e.target.result);
+        };
+        reader.readAsDataURL(file);
+      }
+    });
 
-        $('#captionText').on('input', function () {
-            $('.caption span').text($(this).val());
-        });
+    $('#captionText').on('input', function () {
+      $('.caption span').text($(this).val());
+    });
 
-        $('#footerImage').on('change', function (e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    $('#footerLogo').attr('src', e.target.result).show();
-                    $('.caption').addClass('with-footer');
-                };
-                reader.readAsDataURL(file);
-            } else {
-                $('#footerLogo').hide();
-                $('.caption').removeClass('with-footer');
-            }
-        });
+    $('#footerImage').on('change', function (e) {
+      const file = e.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          $('#footerLogo').attr('src', e.target.result).show();
+          $('.caption').addClass('with-footer');
+        };
+        reader.readAsDataURL(file);
+      } else {
+        $('#footerLogo').hide();
+        $('.caption').removeClass('with-footer');
+      }
+    });
 
-        $('#topLogo').on('change', function (e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    $('.top-left-logo').attr('src', e.target.result).show();
-                };
-                reader.readAsDataURL(file);
-            }
-        });
+    $('#topLogo').on('change', function (e) {
+      const file = e.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          $('.top-left-logo').attr('src', e.target.result).show();
+        };
+        reader.readAsDataURL(file);
+      }
+    });
 
-        $('#downloadBtn').on('click', function () {
-            const btn = $(this);
-            btn.hide();
-            html2canvas(document.querySelector('.news-card')).then(canvas => {
-                const link = document.createElement('a');
-                const now = new Date();
-                const pad = (n) => n.toString().padStart(2, '0');
-                const timestamp = now.getFullYear().toString() +
-                    pad(now.getMonth() + 1) +
-                    pad(now.getDate()) + '_' +
-                    pad(now.getHours()) +
-                    pad(now.getMinutes()) +
-                    pad(now.getSeconds());
-
-                link.download = `brand_promotion_card_${timestamp}.png`;
-                link.href = canvas.toDataURL('image/png');
-                link.click();
-                btn.show();
-            });
-        });
-    </script>
+    $('#downloadBtn').on('click', function () {
+      const btn = $(this);
+      btn.hide();
+      html2canvas(document.querySelector('.news-card')).then(canvas => {
+        const link = document.createElement('a');
+        const now = new Date();
+        const pad = n => n.toString().padStart(2, '0');
+        const timestamp = `${now.getFullYear()}${pad(now.getMonth() + 1)}${pad(now.getDate())}_${pad(now.getHours())}${pad(now.getMinutes())}${pad(now.getSeconds())}`;
+        link.download = `brand_card_${timestamp}.png`;
+        link.href = canvas.toDataURL('image/png');
+        link.click();
+        btn.show();
+      });
+    });
+  </script>
 </body>
-
 </html>
