--- a/BrandPromotion/index.html
+++ b/BrandPromotion/index.html
@@ -158,7 +158,7 @@
         <div class="news-card">
           <div class="image-container">
             <img class="news-image" src="https://img.freepik.com/free-photo/blue-teal-sand-paper_53876-92791.jpg" alt="Product Image">
-            <img class="top-left-logo" src="" alt="Top Logo">
+            <img class="top-left-logo" src="" alt="Logo">
           </div>
           <div class="caption">
             <span>আজই অর্ডার করুন!</span>
